--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,44 @@
   margin: 0px;
 }
 
+
+.back-button {
+  width: 300px;
+  height: 40px;
+  background-color: #7D5BA6;
+}
+
+
+/* Style the search field */
+form.example input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 70%;
+  background: #f1f1f1;
+}
+
+/* Style the submit button */
+form.example button {
+  float: left;
+  width: 30%;
+  padding: 10px;
+  background: #7D5BA6;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none; /* Prevent double borders */
+  cursor: pointer;
+}
+
+form.example button:hover {
+  background: #0b7dda;
+}
+
+/* Clear floats */
+form.example::after {
+  content: "";
+  clear: both;
+  display: table;
+}
